Fix overflow message.

--- a/less/list.less
+++ b/less/list.less
@@ -204,6 +204,7 @@
 			}
 			.message {
 			    padding: 10px 15px;
+			    overflow: hidden;
 			    p:last-of-type {
 			    	margin-bottom: 0;
 			    }
